public/css/custom.css
/* ... */
.cre-4 {background:url(../img/Credential%20Thumbnail/PLT_Website_Thumbnail_Background.jpg);}
.cre-5 {background:url(../img/Credential%20Thumbnail/HairMilk_Thumbnail_Background.jpg);}
.cre-6 {background:url(../img/Credential%20Thumbnail/Hairdepot_Thumbnail_Background.jpg);}
.cre-7 {background:url(../img/Credential%20Thumbnail/HairMilk_Thumbnail_Background.jpg);}
.cre-8 {background:url(../img/Credential%20Thumbnail/PLT_Website_Thumbnail_Background.jpg);} 
.cre .panel-title {text-align:left;}
.cre .contbox {position: relative;;min-height: 260px;}
.sol .contbox ul,.cre .contbox ul {margin: 0px;padding: 0px; }

.credential .blankbox{height: 400px; width: 100%;}
.credential .whitebg {background-color:#ffffff ; }
.credential .box{position: absolute;bottom:0px; margin-bottom:1.2%; color:#fff; }
.credential .box-content{padding:10px;}
.credential .box-bg{position: absolute;width: 99%;height: 100%;
	-moz-opacity: 0.85;
	-khtml-opacity: 0.85;
	opacity: 0.85;
	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha"(Opacity=85);
	filter: progid:DXImageTransform.Microsoft.Alpha(opacity=85);
	filter:alpha(opacity=85);}
.credential .cre-of1 {position:absolute; bottom:0; right:0; z-index:2;}
.credential .desctitle { font-size:14px; font-weight:bold;}
.credential .box-content h3 {margin-top:0px; margin-bottom:18px;}
.credential .box-content p {margin-bottom:5px;}
.credential .col-ppl .photo {margin-bottom:10px; text-align:center;}
.credential .col-ppl p {text-align:center; font-size:12px;}
.credential .crecol-1 {padding-left:0;}
.credential .crecol-1,.credential .crecol-2{text-align: justify;}
.cre .comingsoon {}

.container-fluid.process{margin: 15px;background-color: #eee;padding-top: 80px;}
.process-flow{padding: 0px;}
.process .flow {background:url(../img/processBG.png) no-repeat center; padding:40px 0; margin:40px 0; color:#333;}
.process .flow .left {width:50%; height:100px; margin-right:50%; background:url(../img/processflowL.png) no-repeat right;margin-left: 0.5%;}
.process .flow .right {width:50%; height:100px; margin-left:49.6%; background:url(../img/processflowR.png) no-repeat left;}
.process .flow .box  {width: 507px; padding:22px 90px; position:relative;height: 100%}
.process .flow .left .box {float:right;}
/*.process .flow .right .box {float:left;}*/
.process .flow .left .box span {color: #f7941a; font-size:25px; position: absolute; right: 50px; bottom: 0px;}
.process .flow .right .box span {color: #f7941a; font-size:25px; position: absolute; left: 50px; bottom: 0px;}

.container-fluid.aboutus{margin: 15px;background-color: #eee;padding-top: 80px;}
.aboutus .tagline {color:#f7941a; font-size:55px;}
.aboutus .sub-tagline {color:#fff; font-size:20px; margin-bottom:50px;font-weight: lighter;}
.aboutus .about-img1 {position:absolute; bottom:0; right:0; z-index:2;}
.aboutus .about-txt {margin-top :50px; margin-bottom:80px;}
.aboutus .about-txt h4 {color:#f7941a; font-size:18px; margin-top:20px;}
.aboutus .about-img2 {height:253px; display:block; background:url(../img/Images-08-1.png) no-repeat center center; clear:both;}
.aboutus .about-img3 {clear:both; text-align:center;}
.aboutus .about-369 {margin:50px 0 0; padding-bottom:100px; background:url(../img/Images-40.png) no-repeat bottom center; background-size: 100%;}
.aboutus .about-369 .about-369txt {margin-top:20px; font-size:12px; line-height:20px;}
.aboutus .about-369 .about-369img {margin-top:50px;}
.aboutus .about-369 .about-369img img {max-width: 150px;}
.aboutus .about-369 .col-xs-6 {width:100%;}
.aboutus .about-369heading img{max-width: 131px;}
.aboutus .team,{background:#f7941a;}
.aboutus .team .profilepic img {width:100%;}
.aboutus .team .profilepic {margin-top:30px;}
.aboutus .team .profilename {color:#fff; margin:20px 0;}
.aboutus .team .profiledesc {margin-bottom:30px;}
.aboutus .career .job {overflow:hidden; margin-bottom: 30px; margin-top:10px;}
.aboutus .career .job button {border: 1px solid #fff; background: none; color: #fff; padding: 10px 20px; border-radius: 0; float:right;}

.container-fluid.contactus{margin: 15px;background-color: #eee;padding-top: 80px;}
.contactus .contactdetails {background:#FFF; padding:40px 0; font-size:12px;} 
.contactus ul { list-style:none; padding:0; overflow:hidden;}
.contactus li {padding-left:26px;}
.contactus-icon {width:20px; height:20px; display:inline-block; margin-right:10px;} 
.contactus .phone {background:url(../img/Images-19.png) no-repeat 0px -205px;}
.contactus .mail {background:url(../img/Images-19.png) no-repeat 0px -283px;}
.contactus .fax {background:url(../img/Images-19.png) no-repeat 0px -245px;}
.contactus .handphone {background:url(../img/Images-19.png) no-repeat 0px -325px;}
.contactus .active .form-control{border-color: #f7941a;}
.contactus .active .cont-msg,.contactus .active .cont-name,.contactus .active .cont-mail,.contactus .active .cont-contact,.contactus .active .cont-title{background-position-x: -40px;}
.contactus .form-control {font-size:16px;background:none; border-radius:0; box-shadow:none; border-width: 0 0 1px 0; border-bottom:1px solid #333; padding-left:40px; height:45px;   margin-bottom: 20px;}
.contactus  textarea {width:100%; min-height:180px; border:1px solid #333; background:none; margin-bottom:20px;}
.contactus .active textarea{border:1px solid #f7941a;outline:transparent;}
.contactus label {visibility:hidden;margin-top: 0px;margin-bottom: 18px;}
.contactus label.unhide {visibility:visible; padding-left:40px;}
.contactus .icon {width:30px; height:30px; display:block; position:absolute;}
.contactus .cont-name {background:url(../img/Images-19.png) no-repeat 0px 0px;}
.contactus .cont-mail {background:url(../img/Images-19.png) no-repeat 0px -40px;}
.contactus .cont-contact {background:url(../img/Images-19.png) no-repeat 0px -80px;}
.contactus .cont-title {background:url(../img/Images-19.png) no-repeat 0px -120px;}
.contactus .cont-msg {background:url(../img/Images-19.png) no-repeat 0px -160px;}
/* ... */

